--- a/endpoints/adminEndpoint/views/admin-page/styles/main/main.css
+++ b/endpoints/adminEndpoint/views/admin-page/styles/main/main.css
@@ -106,6 +106,7 @@ div.section-container__canvas-container {
   align-items: center;
   justify-content: center;
   padding-top: 48px;
+  padding-bottom: 48px;
 }
 div.section-container__canvas-container canvas {
   height: 336px;
@@ -150,7 +151,7 @@ div.section-container__table-container > table tbody > tr > td {
 div.section-container__table-container > table tbody > tr > td.regular-container {
   min-width: 296px;
 }
-div.section-container__table-container > table tbody > tr > td.action-container {
+div.section-container__table-container > table tbody > tr > td.ghost-container, div.section-container__table-container > table tbody > tr > td.action-container {
   width: 175px;
   min-width: 175px;
 }
@@ -251,7 +252,7 @@ div.cell-container > div.cell-container__cell-info-container > i:last-of-type {
   color: var(--regular-green);
 }
 
-div.cell-container__input-container {
+div.cell-container__content-container {
   display: flex;
   gap: 7px;
   align-items: center;
