--- a/endpoints/rootEndpoint/views/root-page/styles/header/header.scss
+++ b/endpoints/rootEndpoint/views/root-page/styles/header/header.scss
@@ -108,6 +108,7 @@ div.search-container {
 		border-radius: 7px;
 		padding: 5.6px 11.2px;
 		font-size: 13.3px;
+		border: 1px solid white;
 		color: var(--dark-gray);
 	}
 
