--- a/endpoints/rootEndpoint/views/root-page/styles/header/header.css
+++ b/endpoints/rootEndpoint/views/root-page/styles/header/header.css
@@ -132,6 +132,7 @@ div.search-container > input {
   border-radius: 7px;
   padding: 5.6px 11.2px;
   font-size: 13.3px;
+  border: 1px solid white;
   color: var(--dark-gray);
 }
 div.search-container > input.--none {
