--- a/endpoints/adminEndpoint/views/admin-page/index.ejs
+++ b/endpoints/adminEndpoint/views/admin-page/index.ejs
@@ -182,7 +182,7 @@
 						<thead>
 							<tr>
 								<th>#</th>
-								<th>Top 10 Produtos</th>
+								<th>Top Produtos</th>
 								<th>Número de Clicks Neste Ano</th>
 							</tr>
 						</thead>
