update: additional-image

--- a/endpoints/adminEndpoint/views/admin-page/index.ejs
+++ b/endpoints/adminEndpoint/views/admin-page/index.ejs
@@ -642,6 +642,7 @@
 							<tr>
 								<th>Ações</th>
 								<th>Imagem do Produto</th>
+								<th>Imagem Adicional</th>
 								<th>Categoria</th>
 								<th>Nome</th>
 								<th>Preço</th>
@@ -682,7 +683,7 @@
 											</div>
 										</div>
 									</td>
-									<td width="14.2%" class="regular-container">
+									<td width="12.5%" class="regular-container">
 										<div cell-container class="cell-container">
 											<div
 												file-input-container
@@ -709,7 +710,36 @@
 											</div>
 										</div>
 									</td>
-									<td width="14.2%" class="regular-container">
+									<td width="12.5%" class="regular-container">
+										<div cell-container class="cell-container">
+											<div
+												file-input-container
+												class="cell-container__content-container cell-container__file-input-container"
+											>
+												<label>
+													<i class="fa-solid fa-image"></i>
+												</label>
+												<input additional-image type="file" accept="image/*" />
+												<a target="_blank" rel="noopener noreferrer"
+													>Imagem Adicional</a
+												>
+											</div>
+											<div
+												cell-info
+												class="cell-container__cell-info-container"
+											>
+												<i
+													class="cell-container__cell-info-container__loading"
+												></i>
+												<i
+													cell-info-error
+													class="fa-sharp fa-solid fa-circle-exclamation"
+												></i>
+												<i class="fa-solid fa-circle-check"></i>
+											</div>
+										</div>
+									</td>
+									<td width="12.5%" class="regular-container">
 										<div cell-container class="cell-container">
 											<div
 												class="cell-container__content-container cell-container__select-container"
@@ -735,7 +765,7 @@
 											</div>
 										</div>
 									</td>
-									<td width="14.2%" class="regular-container">
+									<td width="12.5%" class="regular-container">
 										<div cell-container class="cell-container">
 											<div
 												class="cell-container__content-container cell-container__text-input-container"
@@ -763,7 +793,7 @@
 											</div>
 										</div>
 									</td>
-									<td width="14.2%" class="regular-container">
+									<td width="12.5%" class="regular-container">
 										<div cell-container class="cell-container">
 											<div
 												class="cell-container__content-container cell-container__text-input-container"
@@ -791,7 +821,7 @@
 											</div>
 										</div>
 									</td>
-									<td width="14.2%" class="regular-container">
+									<td width="12.5%" class="regular-container">
 										<div cell-container class="cell-container">
 											<div
 												class="cell-container__content-container cell-container__text-input-container"
@@ -819,7 +849,7 @@
 											</div>
 										</div>
 									</td>
-									<td width="14.2%" class="regular-container">
+									<td width="12.5%" class="regular-container">
 										<div cell-container class="cell-container">
 											<div
 												class="cell-container__content-container cell-container__text-input-container"
@@ -847,7 +877,7 @@
 											</div>
 										</div>
 									</td>
-									<td width="14.2%" class="regular-container">
+									<td width="12.5%" class="regular-container">
 										<div cell-container class="cell-container">
 											<div
 												class="cell-container__content-container cell-container__text-input-container"
@@ -875,7 +905,7 @@
 											</div>
 										</div>
 									</td>
-									<td width="14.2%" class="regular-container">
+									<td width="12.5%" class="regular-container">
 										<div cell-container class="cell-container">
 											<div
 												class="cell-container__content-container cell-container__text-input-container"
