--- a/endpoints/rootEndpoint/views/root-page/styles/modules/modules.scss
+++ b/endpoints/rootEndpoint/views/root-page/styles/modules/modules.scss
@@ -192,6 +192,7 @@
 			height: 140px;
 			border-radius: 7px;
 			object-fit: contain;
+			transition: ease-in-out 0.6s;
 		}
 
 		& > div:last-of-type {
