--- a/endpoints/adminEndpoint/views/admin-page/index.ejs
+++ b/endpoints/adminEndpoint/views/admin-page/index.ejs
@@ -716,6 +716,9 @@
 												file-input-container
 												class="cell-container__content-container cell-container__file-input-container"
 											>
+												<button>
+													<i class="fa-solid fa-trash"></i>
+												</button>
 												<label>
 													<i class="fa-solid fa-image"></i>
 												</label>
