--- a/endpoints/rootEndpoint/views/root-page/styles/header/header.css
+++ b/endpoints/rootEndpoint/views/root-page/styles/header/header.css
@@ -177,17 +177,14 @@ div.search-container > div > div > button > img {
 }
 div.search-container > div > div > button > div {
   width: 100%;
-  overflow: hidden;
-  text-overflow: ellipsis;
+  display: flex;
+  flex-direction: column;
+  gap: 7px;
 }
 div.search-container > div > div > button > div p {
-  width: inherit;
-  line-height: 140%;
+  line-height: 115%;
   cursor: pointer;
   text-align: left;
-  text-overflow: ellipsis;
-  overflow: hidden;
-  white-space: nowrap;
   font-family: var(--font-bold);
 }
 div.search-container > div > div > button > div > p:first-of-type {
