--- a/endpoints/adminEndpoint/views/admin-page/styles/main/main.scss
+++ b/endpoints/adminEndpoint/views/admin-page/styles/main/main.scss
@@ -293,6 +293,11 @@ div.cell-container__content-container {
 	align-items: center;
 	justify-content: center;
 	width: 100%;
+
+	p {
+		padding: 7px 0px;
+		text-align: center;
+	}
 }
 
 div.cell-container__file-input-container {
