--- a/endpoints/rootEndpoint/views/root-page/index.ejs
+++ b/endpoints/rootEndpoint/views/root-page/index.ejs
@@ -1,5 +1,5 @@
 <!--v1.0.1-->
-<!--^3sU99!&036l-->
+<!--vHambuguer-->
 <!DOCTYPE html>
 <html lang="pt-BR">
 	<head>
@@ -67,7 +67,11 @@
 				<button>
 					<i class="fa-solid fa-circle-xmark"></i>
 				</button>
-				<a href="<%= builder['pop-up'].link %>" target="_blank">
+				<a
+					href="<%= builder['pop-up'].link %>"
+					target="_blank"
+					rel="noopener noreferrer"
+				>
 					<img src="<%= builder['pop-up'].image %>" alt="Pop-Up Image" />
 				</a>
 			</div>
@@ -110,7 +114,7 @@
 											<p product-installment></p>
 										</div>
 									</div>
-									<a product-link target="_blank">
+									<a product-link target="_blank" rel="noopener noreferrer">
 										<i class="fa-brands fa-whatsapp"></i>
 										Pedir Produto
 									</a>
@@ -274,7 +278,11 @@
 									<p><%= product.installment %></p>
 								</div>
 							</div>
-							<a target="_blank" href="/api/order/<%= product.id %>">
+							<a
+								target="_blank"
+								href="/api/order/<%= product.id %>"
+								rel="noopener noreferrer"
+							>
 								<i class="fa-brands fa-whatsapp"></i>
 								Pedir Produto
 							</a>
